# agades-pqc-gym

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  ASI_LABS_COLLABORATION_BRIEF.md  EVAL_LOG.md  FAMILY_ADAPTERS.md  HUGGINGFACE_RELEASE_PLAN.md  IMPLEMENT.md  LEO_DUCAS_COLLABORATION_BRIEF.md  PLAN.md  QUICKSTART.md  (+40 more)
prime_intellect/verifiers_environment/: README.md  agades_pqc_verifier_env.py  prime_manifest.json  pyproject.toml
prime_intellect/verifiers_environment/data/: code_based_bike_placeholder.json  code_based_bjmm_toy.json  code_based_classic_mceliece_support_syndrome_toy.json  code_based_dumer_toy.json  code_based_hqc_circulant_erasure_toy.json  code_based_hqc_parity_check_toy.json  code_based_hqc_repetition_toy.json  code_based_lee_brickell_toy.json  code_based_mdpc_syndrome_weight_toy.json  code_based_prange_toy_n15.json  code_based_qc_rotation_toy.json  code_based_stern_toy.json  hash_based_bound_placeholder.json  hash_based_fors_auth_path_toy.json  hash_based_merkle_auth_path_toy.json  hash_based_misuse_reused_salt_toy.json  hash_based_preimage_toy.json  hash_based_signature_toy.json  hash_based_slh_dsa_hypertree_toy.json  implementation_security_binary_size_toy.json  implementation_security_constant_time_placeholder.json  implementation_security_ctgrind_schema.json  implementation_security_dudect_summary_toy.json  implementation_security_kat_toy.json  implementation_security_memory_toy.json  implementation_security_mldsa_acvp_toy.json  implementation_security_mldsa_kat_toy.json  implementation_security_pqclean_schema.json  implementation_security_timing_toy.json  isogeny_historical_placeholder.json  lattice_bdd_toy.json  lattice_downscaled_lwe_instance_solve_n6_q23_ternary_toy.json  lattice_downscaled_mlwe_instance_solve_toy.json  lattice_dual_attack_toy.json  lattice_mlwe_module_hypothesis_toy.json  lattice_primal_usvp_toy.json  lattice_primal_usvp_toy_reproducible.json  lattice_sis_schema_placeholder.json  multivariate_minrank_placeholder.json  multivariate_minrank_rank_one_toy.json  (+5 more)
prime_intellect/verifiers_environment/docs/: deepevolve_research_hooks_manifest.json  external_publication_review_packet.json  family_support_matrix.json  formal_estimator_model.json  formal_smt_assist_contract.json  huggingface_publication_handoff.json  nvidia_publication_handoff.json  pedagogical_rl_method.json  prime_eval_config_manifest.json  prime_publication_handoff.json  prime_speedrun_handoff.json  private_dataset_curation.json  private_training_config_manifest.json  private_training_readiness.json  publication_manifest.json  reviewer_governance.json  rl_environment_contract.json
prime_intellect/verifiers_environment/formal/lean/: AgadesPQC.lean
prime_intellect/verifiers_environment/formal/lean/AgadesPQC/HashBased/: Target.lean
prime_intellect/verifiers_environment/formal/lean/AgadesPQC/Lattice/: PrimalUSVP.lean
prime_intellect/verifiers_environment/formal/lean/AgadesPQC/Multivariate/: Target.lean
(+716 files in other folders)
