[project]
name = "agades-pqc-gym"
version = "0.1.0"
description = "Family-agnostic evaluator-driven evolutionary search workbench for cryptanalytic attack strategies"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Agades Technologies"}]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0.1,<7",
    "rich>=13.7,<15",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.15,<1",
]

[project.scripts]
agades-pqc = "agades_pqc_gym.cli:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agades_pqc_gym = [
    "families/code_based/fixtures/*.json",
    "families/hash_based/fixtures/*.json",
    "families/implementation_security/fixtures/*.json",
    "families/isogeny_historical/fixtures/*.json",
    "families/lattice/fixtures/*.json",
    "families/multivariate/fixtures/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
